test_suite/alan-2022-examples/failing/006910_mutation.alan
source w begin put * "" end
